fixing gig spacing

--- a/client/src/component/Home/home.css
+++ b/client/src/component/Home/home.css
@@ -1,6 +1,7 @@
 .all-gigs-container {
   display: grid;
   padding: 2rem 1.5rem 0;
+  gap: 1.25rem;
 }
 
 @media screen and (min-width: 600px) {
@@ -18,7 +19,6 @@
 @media screen and (min-width: 900px) {
   .all-gigs-container {
     grid-template-columns: 1fr 1fr 1fr 1fr;
-    gap: 0.8rem;
   }
 }
 
